--- a/Kotlin/(2)基础语法---词法.md
+++ b/Kotlin/(2)基础语法---词法.md
@@ -1,5 +1,17 @@
+<!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
 
+- [基础语法---词法](#基础语法-词法)
+	- [Boolean](#boolean)
+	- [Number](#number)
+	- [装箱拆箱与Char数据类型](#装箱拆箱与char数据类型)
+	- [基本数据类型转换与字符串](#基本数据类型转换与字符串)
+	- [类与对象](#类与对象)
+	- [空类型和智能类型转换](#空类型和智能类型转换)
+	- [包(Package)](#包package)
+	- [区间(Range)](#区间range)
+	- [数组(Array)](#数组array)
 
+<!-- /TOC -->
 
 # 基础语法---词法
 
@@ -51,6 +63,7 @@
   - 子类拥有父类的一切特征
   - 子类也可以自定义自己的特征
   - 所有类都最终继承自Any
+- 类想要被继承要加open，方法想被复写要加open。在子类中：如果是重写父类的方法或属性要加override关键字指明
 
 ## 空类型和智能类型转换
 - <span style="color:red">val name: String = getName() ?: return</span>
